results/SpecGenBench/4-shot/log-SelfDividing-2023_11_05_21_23_02.txt
class SelfDeviding {
    //@ requires num >= 0;
    //@ ensures \result <==> (\forall int i; i = num; i > 0; i /= 10; i % 10 != 0 && num % (i % 10) == 0);
    public static boolean isSelfDividable(int num) {
        int temp = num;
        //@ maintaining temp >= 0;
        //@ maintaining (\forall int i; i = temp; i > 0; i /= 10; i % 10 != 0 && num % (i % 10) == 0);
        //@ decreases temp;
        while (temp > 0) {
            int digit = temp % 10;
            if (digit == 0 || num % digit != 0) {
                return false;
            }
            temp /= 10;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/SelfDividing.java:3: error: ')' expected
    //@ ensures \result <==> (\forall int i; i = num; i > 0; i /= 10; i % 10 != 0 && num % (i % 10) == 0);
                                                           ^
/home/max/Documents/JMLGPT/tmp/SelfDividing.java:3: error: <identifier> expected
    //@ ensures \result <==> (\forall int i; i = num; i > 0; i /= 10; i % 10 != 0 && num % (i % 10) == 0);
                                                              ^
/home/max/Documents/JMLGPT/tmp/SelfDividing.java:3: error: Method specs may not precede a variable declaration
    //@ ensures \result <==> (\forall int i; i = num; i > 0; i /= 10; i % 10 != 0 && num % (i % 10) == 0);
                                                               ^
/home/max/Documents/JMLGPT/tmp/SelfDividing.java:3: error: <identifier> expected
    //@ ensures \result <==> (\forall int i; i = num; i > 0; i /= 10; i % 10 != 0 && num % (i % 10) == 0);
                                                                       ^
/home/max/Documents/JMLGPT/tmp/SelfDividing.java:3: error: <identifier> expected
    //@ ensures \result <==> (\forall int i; i = num; i > 0; i /= 10; i % 10 != 0 && num % (i % 10) == 0);
                                                                                        ^
/home/max/Documents/JMLGPT/tmp/SelfDividing.java:3: error: <identifier> expected
    //@ ensures \result <==> (\forall int i; i = num; i > 0; i /= 10; i % 10 != 0 && num % (i % 10) == 0);
                                                                                             ^
/home/max/Documents/JMLGPT/tmp/SelfDividing.java:7: error: ')' expected
        //@ maintaining (\forall int i; i = temp; i > 0; i /= 10; i % 10 != 0 && num % (i % 10) == 0);
                                                       ^
/home/max/Documents/JMLGPT/tmp/SelfDividing.java:7: error: Expected loop specifications while in JML: i is not a loop specification keyword
        //@ maintaining (\forall int i; i = temp; i > 0; i /= 10; i % 10 != 0 && num % (i % 10) == 0);
                                                         ^
/home/max/Documents/JMLGPT/tmp/SelfDividing.java:7: error: Expected loop specifications while in JML: i is not a loop specification keyword
        //@ maintaining (\forall int i; i = temp; i > 0; i /= 10; i % 10 != 0 && num % (i % 10) == 0);
                                                                  ^
9 errors

